# strato-mcp-google-calendar

./: .dockerignore  .env.example  .gitignore  CITATION.cff  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: docker-publish.yml  python-checks.yml
src/google_calendar_mcp/: config.py  server.py
src/google_calendar_mcp/auth/: oauth.py  token_store.py
src/google_calendar_mcp/calendar/: calendars.py  client.py  events.py  freebusy.py
src/google_calendar_mcp/tools/: __init__.py  calendars.py  events.py  freebusy.py
tests/: conftest.py  test_auth.py  test_calendars.py  test_events.py  test_freebusy.py  test_oauth.py  test_tools.py
